odified the html page

--- a/sumana/Bitcoin/index.html
+++ b/sumana/Bitcoin/index.html
@@ -42,7 +42,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Bitcoin Overview</h1>
+					<h1>Project Name</h1>
 					<p>
 						to be ...
 					</p>
