--- a/sumana/Bitcoin/introduce.html
+++ b/sumana/Bitcoin/introduce.html
@@ -33,7 +33,7 @@
 
 		<!-- Heading -->
 			<div id="heading" >
-				<h1>Trading of Bitcoin</h1>
+				<h1>Bitcoin Overview</h1>
 			</div>
 
 		<!-- Main -->
@@ -44,13 +44,25 @@
 						<h2>What is Bitcoin?</h2>
 						<hr>
 
-						<p>Bitcoin is </p>
+						<p>Bitcoin is a new currency that was created in 2009 by an unknown person using the alias Satoshi Nakamoto. Transactions are made with no middle men – meaning, no banks! Much of the hype is about getting rich by trading it. The price of bitcoin skyrocketed into the thousands in 2017.
+
+						</p>
 
 					</div>
 					<div class="content">
 						
 						<h2>History of Bitcoin</h2>
 						<hr>
+						<h6>
+							<span>Brief history of Bitcoin and cryptocurrency.</span>
+							
+						</h6>
+						<p>
+							In August 2008, the domain name bitcoin.org was quietly registered online.Two months later, a paper entitled 'Bitcoin: A Peer-to-Peer Electronic Cash System' was passed around a cryptography mailing list.
+							Bitcoin runs through an autonomous software program that is 'mined' by people seeking bitcoin in a lottery-based system.
+							In 2010, a handful of merchants started accepting bitcoin in lieu of established currencies.One of the first tangible items ever purchased with the cryptocurrency was a pizza. Today, the amount of bitcoin used to purchase those pizzas is valued at $100 million. 
+
+						</p>
 
 					</div>
 					<div class="content">
