--- a/sumana/Bitcoin/introduce.html
+++ b/sumana/Bitcoin/introduce.html
@@ -44,8 +44,7 @@
 						<h2>What is Bitcoin?</h2>
 						<hr>
 
-						<p>Bitcoin is a new currency that was created in 2009 by an unknown person using the alias Satoshi Nakamoto. Transactions are made with no middle men – meaning, no banks! Much of the hype is about getting rich by trading it. The price of bitcoin skyrocketed into the thousands in 2017.
-
+						<p>Bitcoin is a cryptocurrency digital asset and worldwide payment system, designed to work as a medium of exchange that uses cryptography to secure its transactions, to control the creation of additional units, and to verify the transfer of assets.
 						</p>
 
 					</div>
@@ -69,6 +68,7 @@
 						
 						<h2>Trading of Bitcoin</h2>
 						<hr>
+						Bitcoin network transactions utilizes blockchain technology as a list of records that are tied to timestamps, transaction data, account type, digital wallets and smart contracts. Digital wallets allow individuals to make electronic transactions purchasing items online and to link to bank accounts as well. Smart contracts allow the performance of credible transactions without third parties, trackable and irreversible.
 
 					</div>
 				</div>
