corrected the error

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -83,7 +83,7 @@
 
             <!-- Heading -->
 			<div id="heading" >
-				<h1>Bitcoin Exchange across Globe</h1>
+				<h1>Bitcoin Overview</h1>
 			</div>
 
 			<section id="main" class="wrapper">
